fix overflow by returning tailwind class

--- a/src/assets/styles/output.css
+++ b/src/assets/styles/output.css
@@ -751,6 +751,10 @@ video {
   align-self: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .rounded-xl {
   border-radius: 0.75rem;
 }
